--- a/struts2bookStore/.settings/org.eclipse.wst.common.component
+++ b/struts2bookStore/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,15 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <dependent-module archiveName="com.apress.books.model.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/com.apress.books.model/com.apress.books.model">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="com.apress.books.dao.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/com.apress.books.dao/com.apress.books.dao">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="com.apress.books.dao.mysql.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/com.apress.books.dao.mysql/com.apress.books.dao.mysql">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="struts2bookStore"/>
         <property name="java-output-path" value="/struts2bookStore/target/classes"/>
     </wb-module>
